--- a/cv_es.html
+++ b/cv_es.html
@@ -435,8 +435,8 @@
 </div>
 
 <br><div class="cv">
-<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC 2019)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Transparencias</a></span></h4></div>
-  <div class="pretalktitle"></div><div class="talktitle">Transparencias</div>
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC19)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Transparencias</a></span></h4></div>
+  <div class="pretalktitle"></div><div class="talktitle">Plantinga-Vegter algorithm takes average polynomial time</div>
 </div>
 
    <br><div class="cv">
@@ -544,33 +544,33 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a></h4></div>
+      <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets.pdf">Póster</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Closed Semialgebraics Sets in Weak Exponential Time</div>
        <div class="property"></div><div class="value">(obtuvo uno de los tres <a href="#MEGA2019award">Special Awards to Young Researchers presenting their Posters</a>)</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#gradmeeting2019">2nd Graduate Student Meeting on Applied Algebra and Combinatorics</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#gradmeeting2019">2nd Graduate Student Meeting on Applied Algebra and Combinatorics</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets.pdf">Póster</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets in Weak Exponential Time</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#rsme2019">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2019</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#rsme2019">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2019</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets.pdf">Póster</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets in Weak Exponential Time</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#numalg2018">Summer School on Numerical Computing in Algebraic Geometry</a></h4></div>
+      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#numalg2018">Summer School on Numerical Computing in Algebraic Geometry</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets.pdf">Póster</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Semialgebraics Sets</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#qmath2018">QMath Masterclass on &ldquo;Tensors: Geometry and Quantum Information&rdquo;</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#qmath2018">QMath Masterclass on &ldquo;Tensors: Geometry and Quantum Information&rdquo;</a><span style="float:right;"><a href="pdf/Poster_Polynomial_Identity_Testing_and_the_Combinatorics_of_Completely_Positive_Operators.pdf">Póster</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Polynomial Identity Testing and the Combinatorics of Completely Positive Operators</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#BES2">Symposium &ldquo;Bridging European Science II&rdquo;</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#BES2">Symposium &ldquo;Bridging European Science II&rdquo;</a><span style="float:right;"><a href="pdf/Poster_Computing_the_shape_of_semialgebraic_sets.pdf">Póster</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the &ldquo;Shape&rdquo; of Semialgebraic Sets</div>
       </div>
 
