--- a/cv.html
+++ b/cv.html
@@ -566,7 +566,7 @@
       <br><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a><span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets.pdf">Poster</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Closed Semialgebraics Sets in Weak Exponential Time</div>
-       <div class="property"></div><div class="value">(obteined one of the <a href="#MEGA2019award">Special Awards to Young Researchers presenting their Posters</a>)</div>
+       <div class="property"></div><div class="value">(obtained one of the <a href="#MEGA2019award">Special Awards to Young Researchers presenting their Posters</a>)</div>
       </div>
 
       <br><div class="cv">
