--- a/cv.html
+++ b/cv.html
@@ -378,7 +378,7 @@
             <div class="year">
             <h4>2011</h4>
             </div><div class="title">
-            <h4>&emsp;Acc&eacute;sit in the <a href="http://www.ehu.eus/~mtwmastm/audin.html#Conc"><em>Concurso de trabajos sobre Sof&iacute;a Kovalevskaya</em></a><span style="float:right;"><a href="imgs/caligrama_sofia_kovalevskaya.jpg">Link to artwork</a></span></h4></div>
+            <h4>&emsp;Acc&eacute;sit in the <a href="http://www.ehu.eus/~mtwmastm/audin.html#Conc"><em>Concurso de trabajos sobre Sof&iacute;a Kovalevskaya</em></a><span style="float:right;"><a href="imgs/caligrama_sofia_kovalevskaya.jpg">Artwork</a></span></h4></div>
             <div class="year"></div><div class="title">
             <h4>&ensp;&emsp;<em>(Spetial Mention in the Contest of works about Sofia Kovalevskaya)</em></h4></div>
               <div class="property">Awarding institution:</div><div class="value"><a href="https://www.ehu.eus/en/">University of the Basque Country (UPV/EHU)</a></div>
@@ -1667,7 +1667,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <div class="year">
       <h4>2014</h4>
       </div><div class="title">
-      <h4>&emsp; <em>Reflejo de palabras (Reflection of words)</em> at the<span style="float:right;"><a href="imgs/reflejo_palabras.jpg">Link to artwork</a></span></h4></div>
+      <h4>&emsp; <em>Reflejo de palabras (Reflection of words)</em> at the<span style="float:right;"><a href="imgs/reflejo_palabras.jpg">Artwork</a></span></h4></div>
       <div class="year"></div><div class="title">
       <h4>&#160;&#160;<a href="pdf/reflejos.pdf">Exhibition <em>Reflejos. Proyecto experimental entre artistas y escritores.</em></a></h4></div>
         <div class="property">Creator:</div><div class="value"><a href="http://aunamendi.eusko-ikaskuntza.eus/en/cueto-puente-maria-jesus/ar-27108/">Mar&iacute;a Jes&uacute;s Cueto Puente</a> and Josu&eacute; Tonelli-Cueto</div>
