--- a/cv_es.html
+++ b/cv_es.html
@@ -361,7 +361,7 @@
             <div class="year">
             <h4>2011</h4>
             </div><div class="title">
-            <h4>&emsp;Acc&eacute;sit en el <a href="http://www.ehu.eus/~mtwmastm/audin.html#Conc"><em>Concurso de trabajos sobre Sof&iacute;a Kovalevskaya</em></a><span style="float:right;"><a href="imgs/caligrama_sofia_kovalevskaya.jpg">Enlace al trabajo</a></span></h4></div>
+            <h4>&emsp;Acc&eacute;sit en el <a href="http://www.ehu.eus/~mtwmastm/audin.html#Conc"><em>Concurso de trabajos sobre Sof&iacute;a Kovalevskaya</em></a><span style="float:right;"><a href="imgs/caligrama_sofia_kovalevskaya.jpg">Trabajo</a></span></h4></div>
               <div class="property">Institución dadora:</div><div class="value"><a href="https://www.ehu.eus/en/">Universidad del País Vasco (UPV/EHU)</a></div>
               <div class="property">Fecha:</div><div class="value">junio del 2011</div>
             </div>
@@ -1666,14 +1666,14 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <div class="year">
       <h4>2014</h4>
       </div><div class="title">
-      <h4>&emsp; <em>Reflejo de palabras (Reflection of words)</em> at the<span style="float:right;"><a href="imgs/reflejo_palabras.jpg">Link to artwork</a></span></h4></div>
+      <h4>&emsp; <em>Reflejo de palabras</em> at the<span style="float:right;"><a href="imgs/reflejo_palabras.jpg">Trabajo</a></span></h4></div>
       <div class="year"></div><div class="title">
-      <h4>&#160;&#160;<a href="pdf/reflejos.pdf">Exhibition <em>Reflejos. Proyecto experimental entre artistas y escritores.</em></a></h4></div>
-        <div class="property">Creator:</div><div class="value"><a href="http://aunamendi.eusko-ikaskuntza.eus/en/cueto-puente-maria-jesus/ar-27108/">Mar&iacute;a Jes&uacute;s Cueto Puente</a> and Josu&eacute; Tonelli-Cueto</div>
-        <div class="property">Comisario:</div><div class="value">Marina Gurruchaga and Rosario de Gorostegui</div>
+      <h4>&#160;&#160;<a href="pdf/reflejos.pdf">Exposición <em>Reflejos. Proyecto experimental entre artistas y escritores.</em></a></h4></div>
+        <div class="property">Creador:</div><div class="value"><a href="http://aunamendi.eusko-ikaskuntza.eus/en/cueto-puente-maria-jesus/ar-27108/">Mar&iacute;a Jes&uacute;s Cueto Puente</a> y Josu&eacute; Tonelli-Cueto</div>
+        <div class="property">Comisario:</div><div class="value">Marina Gurruchaga y Rosario de Gorostegui</div>
         <div class="property">Institución anfitriona:</div><div class="value"><a href="http://bcc.cantabria.es/"> Biblioteca Central de Cantabria</a></div>
         <div class="property">Lugar:</div><div class="value">Santander, España</div>
-        <div class="property">Fecha:</div><div class="value">10th of Ocober to 4th of November of 2014</div>
+        <div class="property">Fecha:</div><div class="value">del 10 de cotubre al 4 de noviembre del 2014</div>
       </div>
 
       <br><div class="cv">
