--- a/cv_es.html
+++ b/cv_es.html
@@ -1678,37 +1678,29 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <br><div class="cv">
       <div class="year">
-
       </div><div class="title">
       <h4>&emsp;Curso H.1 &iquest;Qu&eacute; hay que ense&ntilde;ar en la escuela?</h4></div>
       <div class="year"></div><div class="title">
       <h4>&#160;&#160;de los XXXIII Curso de Verano de la UPV/EHU</h4></div>
-      <div class="year"></div><div class="title">
-      <h4>&ensp;&emsp;<em>(Course H.1 What should be taught in school?</em></h4></div>
-      <div class="year"></div><div class="title">
-      <h4>&#160;&#160;&ensp;<em>of the XXXIII Summer Courses of the UPV/EHU)</em></h4></div>
         <div class="property">Organizador:</div><div class="value"><a href="https://www.ehu.eus/en/">Universidad del País Vasco (UPV/EHU)</a></div>
         <div class="property">Director:</div><div class="value">Paul&iacute; Davila y Jaume Carbonell</div>
         <div class="property">Ponente:</div><div class="value">&Aacute;ngel P&eacute;rez, Jaume Carbonell, Josep M&ordf; Puig, Rafa Mendia, Gema Celorio y Felix Etxeberria</div>
         <div class="property">Lugar:</div><div class="value">Donostia-San Sebasti&aacute;n, España</div>
-        <div class="property">Fecha:</div><div class="value">25th to 27th of June of 2014</div>
+        <div class="property">Fecha:</div><div class="value">del 25 al 27 de junio del 2014</div>
       </div>
 
       <br><div class="cv">
       <div class="year">
-
       </div><div class="title">
       <h4>&emsp;Workshop 6.1 &ldquo;Once upon a time...&rdquo; Techniques for Storytelling in English</h4></div>
       <div class="year"></div><div class="title">
+      <h4>&ensp;&emsp;<em>(Workshop 6.1 &ldquo;Erase una vez...&rdquo; Técnicas para contar historias en inglés)</em></h4></div>
+      <div class="year"></div><div class="title">
       <h4>&#160;&#160;de los XXXIII Curso de Verano de la UPV/EHU</h4></div>
-      <div class="year"></div><div class="title">
-      <h4>&ensp;&emsp;<em>(Workshop 6.1 &ldquo;Once upon a time...&rdquo; Techniques for Storytelling in English</em></h4></div>
-      <div class="year"></div><div class="title">
-      <h4>&ensp;&#160;&#160;<em>of the XXXIII Summer Courses of the UPV/EHU)</em></h4></div>
         <div class="property">Organizador:</div><div class="value"><a href="https://www.ehu.eus/en/">Universidad del País Vasco (UPV/EHU)</a></div>
         <div class="property">Ponente:</div><div class="value">Diana Lindsay</div>
         <div class="property">Lugar:</div><div class="value">Donostia-San Sebasti&aacute;n, España</div>
-        <div class="property">Fecha:</div><div class="value">23rd to 24th of June of 2014</div>
+        <div class="property">Fecha:</div><div class="value">del 23 al 24 de junio del 2014</div>
       </div>
 
       <br><div class="cv">
