--- a/cv_es.html
+++ b/cv_es.html
@@ -1253,7 +1253,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <div class="property">Organizador:</div><div class="value"><a href="https://qmath.ku.dk/">Centre for the Mathematics of Quantum Theory (QMATH)</a> and <a href="http://nbia.nbi.ku.dk/">Niels Bohr International Academy (NBIA)</a></div>
      <div class="property"></div><div class="value">Fulvio Gesmundo, Albert H. Werner, Matthias Christandl and Suzanne Andersen</div>
      <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.ku.dk/">University of Copenhagen</a></div>
-     <div class="property">Lugar:</div><div class="value">Copenhagen, Denmark</div>
+     <div class="property">Lugar:</div><div class="value">Copenhagen, Dinamarca</div>
      <div class="property">Fecha:</div><div class="value">18th to 22nd of June of 2018</div>
    </div>
 
@@ -1264,7 +1264,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <h4>&emsp;<a href="https://www.math.ias.edu/ocit2018">Workshop &ldquo;Optimization, Complexity and Invariant Theory&rdquo;</a></h4></div>
      <div class="property">Organizador:</div><div class="value">Avi Wigderson</div>
      <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.ias.edu/">Institute for Advanced Study (IAS)</a></div>
-     <div class="property">Lugar:</div><div class="value">Princenton, USA</div>
+     <div class="property">Lugar:</div><div class="value">Princenton, EEUU</div>
      <div class="property">Fecha:</div><div class="value">4th to 8th of June of 2018</div>
    </div>
 
