--- a/cv.html
+++ b/cv.html
@@ -420,7 +420,7 @@
 
       <br><div class="cv">
       <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker, J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
       </div>
 
    </div>
@@ -1838,7 +1838,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <br><p style="text-align:justify;"><small>
         The levels given follow the <a href="https://www.coe.int/en/web/common-european-framework-reference-languages"><em>Common European Framework
-     of Reference for Languages: Learning, Teaching, Assessment</em></a>. In this framework, the levels are, from lowest to highest, A1, A2, B1, B2, C1 and C2. The B1 level indicates <em>Vantage Independent Use</em>, the C1 level <em>Effective Operational Proficiency</em> of the language and the C2 level  <em>Mastery</em> of it.
+     of Reference for Languages: Learning, Teaching, Assessment</em></a>. In this framework, the levels are, from lowest to highest, A1, A2, B1, B2, C1 and C2. The B2 level indicates <em>Vantage Independent Use</em>, the C1 level <em>Effective Operational Proficiency</em> of the language and the C2 level  <em>Mastery</em> of it.
       </small></p>
 
       </div>
