--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josu&eacute; Tonelli-Cueto's Personal Webpage</title>
     <meta name="description" content="Research, interests and more information about Josué Tonelli-Cueto" />
-
+    <meta name="yandex-verification" content="98b48e414f9389e0" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
