--- a/cv_es.html
+++ b/cv_es.html
@@ -130,7 +130,7 @@
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
-        <div class="property">Duración:</div><div class="value">enero del 2017 - noviembre del 2019 (defensa planeada para el 28)</div>
+        <div class="property">Duración:</div><div class="value">enero del 2017 - noviembre del 2019</div>
       </div>
 
       <br><div class="cv">
@@ -388,6 +388,7 @@
       <div class="year"><h4>2018</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
       <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  Labor="button">arXiv:1811.09425</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">(Junto con <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> y <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
+       <div class="pretalktitle"></div><div class="collaborator">A aparecer en el SIAM Journal on Applied Algebra and Geometry (SIAGA)</div>
       </div>
 
       <br><div class="row"><div class="col-md-12">
@@ -630,7 +631,7 @@
    <span id="WhatIsSeminar"></span>
    <br><div class="cv">
    <div class="year">
-   <h4>2016-??</h4>
+   <h4>2016-19</h4>
    </div><div class="title">
    <h4>&emsp;<a href="https://whatisseminar.xyz/">&ldquo;What is...?&rdquo; Seminar</a> (actualmente)</h4></div>
    <div class="year"></div><div class="title">
