--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -79,7 +79,7 @@
 
 
 <div class="container" style="text-align:justify;">
-  <hr><p style="text-align:center;font-variant: small-caps;">The defence will take place on the 28th of November of 2019. More details below.</p><hr>
+  <hr><p style="text-align:center;font-variant: small-caps;">The thesis is in the process of publication.</p><hr>
   <center>
   <h1 style="text-align:center;">
     Condition and Homology in Semialgebraic Geometry
@@ -138,17 +138,13 @@
   </p>
   <hr>
   <h2>
-  Doctoral thesis
+  Doctoral evaluation
   </h2>
   <p>
-  The doctoral thesis was handed in on the 11th of October of 2019. It is currently under examination by the evaluators that are Peter Bürgisser, Felipe Cucker and Pierre Lairez.
+  The doctoral thesis was handed in on the 11th of October of 2019. The evaluators of the thesis were Peter Bürgisser, Felipe Cucker and Pierre Lairez. After the evaluators approved the thesis, the doctoral defence took place on the 28th of November of 2019 at 12:00 at the room MA313/314 in the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni 136). The defence committee was presided by John M. Sullivan and it was formed by the evaluators Peter Bürgisser, Felipe Cucker and Pierre Lairez. After a successful defence, there was a small celebration with food and drinks in the Matheon Lounge (MA315). Currently, the final version of the thesis for publication is under preparation. After the publication of this final version, the degree of doctor will be officially issued.
   </p>
-  <hr>
-  <h2>
-  Doctoral defence
-  </h2>
   <p>
-  The doctoral defence is planned for the 28th of November of 2019 at 12:00. The defence will take place at the room MA313/314 in the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni 136). The defence committee will be presided by John M. Sullivan and it will be formed by the evaluators Peter Bürgisser, Felipe Cucker and Pierre Lairez. After the defence, there will be a small celebration with food and drinks in the Matheon Lounge (MA315).
+  The official name of the obtained academic degree will be <em>Doktor der Naturwissenschaften (Dr. rer. nat.)</em>, which means &ldquo;doctor in natural sciences&rdquo;. In the anglosaxon academic system, this degree is equivalent to a PhD. The final grade of the doctorate (when issued) will be &ldquo;mit Auszeichnung bestanden&rdquo; (summa cum laude), which is the maximum grade obtained only when all the evaluators give the maximum grade to both the thesis and the defence.
   </p>
   <hr>
 </div>
