--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -80,7 +80,7 @@
 
 
 <div class="container" style="text-align:justify;">
-  <hr><p style="text-align:center;font-variant: small-caps;">La defensa tendrá lugar el 28 de noviembre de 2019. Más detalles debajo.</p><hr>
+  <hr><p style="text-align:center;font-variant: small-caps;">La tesis está en el proceso de publicación.</p><hr>
   <center>
   <h1 style="text-align:center;">
     Condition and Homology in Semialgebraic Geometry
@@ -143,17 +143,13 @@
   </p>
   <hr>
   <h2>
-  Tesis doctoral
+  Proceso doctoral
   </h2>
   <p>
-  La tesis doctoral fue entregada el 11 de octubre de 2019. Esta está actualmente bajo examiación por los evaluadures Peter Bürgisser, Felipe Cucker y Pierre Lairez.
+  La tesis doctoral fue entregada el 11 de octubre de 2019. Los evluadores de la tesis fueron Peter Bürgisser, Felipe Cucker y Pierre Lairez. Tras la aprovación de la tesis, la defensa doctoral tuvo lugar el 28 de noviembre de 2019 a las 12:00 en el aula MA313/314 en la 3ª planta del Institut für Mathematik de la Technische Universität Berlin (Str. des 17. Juni 136). El comité de la defensa doctoral fue presidido por John M. Sullivan y estuvo compuesto por los evaluadores Peter Bürgisser, Felipe Cucker and Pierre Lairez. Después de una defensa exitosa, hubo una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315). Actualmente, la versión final de la tesis para publicación se encuentra en preparación. Tras la publicación de esta versión final, el grado de doctor se otorgorá oficialmente.
   </p>
-  <hr>
-  <h2>
-  Defensa doctoral
-  </h2>
   <p>
-  La defensa doctoral está planeada para el 28 de noviembre de 2019 a las 12:00. La defensa tendrá lugar en el aula MA313/314 en la 3ª planta del Institut für Mathematik de la Technische Universität Berlin (Str. des 17. Juni 136). El comité de la defensa doctoral será presidido por John M. Sullivan y estará compuesto por los evaluadores Peter Bürgisser, Felipe Cucker and Pierre Lairez. Después de la defensa, habrá una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315).
+  El nombre oficial del grado académico conseguido es <em>Doktor der Naturwissenschaften (Dr. rer. nat.)</em>, que significa &ldquo;doctor en ciencias naturales&rdquo;. En el sistema académico anglosajón, este grado académico es equivalente al de un PhD. La nota final del doctorado (cuando sea entregado) será &ldquo;mit Auszeichnung bestanden&rdquo; (summa cum laude), que es la nota máxima que se obtine solamente cuando todes les evaluadores dan la nota máxima tanto a la tesis como a la defensa.
   </p>
   <hr>
 </div>
