--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -92,13 +92,13 @@
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
-  <a class="btn btn-phd" href="thesis/thesis_tonellicueto.pdf" role="button" style="width:100%;">Tesis (PDF) [versión entregada]</a></div><div class="col" align="center">
+  <a class="btn btn-phd" href="thesis/genehmigteDissertation_TonelliCueto.pdf" role="button" style="width:100%;">Tesis (PDF) [versión final]</a></div><div class="col" align="center">
   <a class="btn btn-phd" href="thesis/coverthesis_tonellicueto.jpg" role="button" style="width:100%;">Cubierta de la tesis (JPG)</a>
   </div></div>
   <hr>
   <div class="row" align="center">
     <div class="col" align="center">
-       <a href="thesis/thesis_tonellicueto.pdf"><img id="cover" src="thesis/coverpage.jpg" style="margin-bottom:0.5em;margin-top:1em;" alt="Portada de Conditionand Homology in Semialgebraic Geometry por Josué Tonelli Cueto" width="73%"/></a>
+       <a href="thesis/genehmigteDissertation_TonelliCueto.pdf"><img id="cover" src="thesis/coverpage.jpg" style="margin-bottom:0.5em;margin-top:1em;" alt="Portada de Conditionand Homology in Semialgebraic Geometry por Josué Tonelli Cueto" width="73%"/></a>
     </div>
     <div class="col" align="center">
       <a href="https://www.instagram.com/p/B3fBRcdgdQw/"><img id="portrait" src="imgs/josue_tonelli_cueto_thesis.JPG" style="margin-bottom:0.5em;margin-top:1em;" alt="Josué Tonelli Cueto sosteniendo una copia de su tesis doctoral" width="100%"/></a>
@@ -136,7 +136,7 @@
   Zusammenfassung (Resumen en alemán)
   </h3>
   <p>
-  Die Berechnung der Homologiegruppen von semialgebraichen Mengen (gegeben durch boolesche Formeln) bleibt eine der offenen Herausforderungen der algorithmischen semialgebraischen Geometrie. Trotz der Suche nach einem Algorithmus mit einfach exponentieller Laufzeit in der Anzahl der Variablen, sind die nach heutigem Stand bekannten Algorithmen symbolisch und doppelt exponentiell. In dieser Doktorarbeit zeigen wir, wie man einen numerischen Algorithmus konstruiert, der mit großer Wahrscheinlichkeit einfach exponentiell ist und somit den Stand der Forschung verbessert. Dazu erklären wir die zugrundliegenden Ideen, Methoden und Techniken von numerischer algebraischen Geometrie, numerischer Komplexität und topologischer Datenanalyse, die dieser Fortschrift möglich machten. Wir enden mit einer Liste offener Probleme und Fragen, die auf eine mögliche Zukunft von Berechnung der topologischen Invarianten weisen.
+  Die Berechnung der Homologiegruppen von semialgebraischen Mengen (gegeben durch boolesche Formeln) bleibt eine der offenen Herausforderungen der algorithmischen semialgebraischen Geometrie. Trotz der Suche nach einem Algorithmus mit einfach exponentieller Laufzeit in der Anzahl der Variablen, sind die nach heutigem Stand bekannten Algorithmen symbolisch und doppelt exponentiell. In dieser Doktorarbeit zeigen wir, wie man einen numerischen Algorithmus konstruiert, der mit großer Wahrscheinlichkeit einfach exponentiell ist und somit den Stand der Forschung verbessert. Dazu erklären wir die zugrundliegenden Ideen, Methoden und Techniken von numerischer algebraischen Geometrie, numerischer Komplexität und topologischer Datenanalyse, die dieser Fortschrift möglich machten. Wir enden mit einer Liste offener Probleme und Fragen, die auf eine mögliche Zukunft von Berechnung der topologischen Invarianten weisen.
   </p>
   <p>
   Außerdem, behandeln wir im Anhange die erwartete Anzahl reeller Nullstellen eines zufälligen Systems polynomialer Gleichungen mit wenigen Termen und geben einen informellen Überblick über das Hauptthema auf Spanisch.
