--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josu&eacute; Tonelli-Cueto's Research</title>
+    <title>About Josu&eacute; Tonelli-Cueto</title>
     <meta name="description" content="Research interests and list of publications of Josué Tonelli-Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
