--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Investigación de Josu&eacute; Tonelli Cueto</title>
+    <title>Sobre Josu&eacute; Tonelli Cueto</title>
     <meta name="description" content="Intereses de investigación y lista de publicaciones de Josué Tonelli Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
