--- a/index_es.html
+++ b/index_es.html
@@ -101,7 +101,7 @@
         </center>
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
           <div class="col">
-            <a class="btn btn-phd" href="doctoralthesis_es.html" role="button" style="width:55%;">Tesis y defensa doctorales</a>
+            <a class="btn btn-phd" href="doctoralthesis_es.html" role="button" style="width:55%;">Tesis doctoral</a>
           </div>
       </div>
       <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
