--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </center>
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
           <div class="col">
-            <a class="btn btn-phd" href="doctoralthesis.html" role="button" style="width:55%;">Doctoral thesis and defence</a>
+            <a class="btn btn-phd" href="doctoralthesis.html" role="button" style="width:55%;">Doctoral thesis</a>
           </div>
       </div>
       <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
