--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@ Room MA320 (3rd floor)
 </p>
 
 <p align="left">
-<em>ton-cue@math.tu-berlin.de</em>
+<em>firstname.1stsurname.surnametwo@bizkaia.eu</em>
 </p>
 
 <p align="left">
