--- a/contact_es.html
+++ b/contact_es.html
@@ -94,7 +94,7 @@ Habitaci&oacute;n MA320 (3&ordf; planta)
 </p>
 
 <p align="left">
-<em>ton-cue@math.tu-berlin.de</em>
+<em>nombre.apellido1.2&#186;apellido@bizkaia.eu</em>
 </p>
 
 <p align="left">
